minor spacing fix for blockquote > p

--- a/source/styles/modules/body/content.styl
+++ b/source/styles/modules/body/content.styl
@@ -20,6 +20,10 @@
     +above($linewrap + 200) // magic
       p-x: 0
 
+  blockquote > p
+    m-s: 0
+    p-e: 0
+
   pre
     overflow-x: auto
     m-s: $gap2
